[tool.poetry]
package-mode = false

[project]
name = "file-converter-app"
version = "0.1.0"
description = "XPT ↔ Parquet ↔ CSV converter Streamlit app"
requires-python = ">=3.9"

dependencies = [
    "streamlit>=1.30",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pyreadstat>=1.2.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.streamlit]
serverPort = 8501