[project]
name = "file-converter-app"
version = "0.1.0"
description = "Simple file converter Streamlit app"
requires-python = ">=3.10,<3.12"

dependencies = [
    "streamlit",
    "pandas",
    "pyarrow",
    "pyreadstat"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"